[SYNCOPE-1531] Improvements: Swagger docs + propagation actions for CSV export + result page in Admin Console for CSV import